force-app/main/default/objects/ABCL_Integration_Event__e/ABCL_Integration_Event__e.object-meta.xml
<CustomObject>
    <description>This Platform Event is used for all Non-Case related Integration. 
Always send the RecordId of the Parent Record. Example if the integration happening on Lead record send Lead Id in Record_Id__c field.
Request__c - To store entire payload of the event.
Business_Unit__c - To store the Business Unit, this is useful to separate the orchestration at AWS Layer.</description>
    <label>ABCL Integration Event</label>
    <pluralLabel>ABCL Integration Events</pluralLabel>
</CustomObject>