force-app/main/default/objects/ABCL_Integration_Event__e/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>