force-app/main/default/objects/ABCL_Integration_Event__e/fields/ServiceName__c.field-meta.xml
<CustomField>
    <fullName>ServiceName__c</fullName>
    <description>Pass Service Name. This is read by AWS EventBridge and then right Lambda to be invoke from AWS Gateway.</description>
    <label>ServiceName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>